--- a/stable/velero/templates/deployment.yaml
+++ b/stable/velero/templates/deployment.yaml
@@ -47,6 +47,8 @@ spec:
             - /velero
           args:
             - server
+            - --log-level
+            - debug
           {{- with .Values.configuration }}
             {{- with .backupSyncPeriod }}
             - --backup-sync-period={{ . }}
